--- a/spaceshiptatanic.ipynb
+++ b/spaceshiptatanic.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMWcO+aVle8hV/rSDeIQC65",
+      "authorship_tag": "ABX9TyNQWugrskF5Zrx+8XJT67mY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,6 +57,154 @@
         "\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Display the first few rows of the training dataset to understand its structure\n",
+        "train_df_spaceship.head()\n",
+        "\n",
+        "# Extract and store the 'PassengerId' column from the test dataset for submission purposes\n",
+        "test_passenger_ids = test_df_spaceship['PassengerId']\n",
+        "\n",
+        "# Print the number of missing values for each column in the training dataset\n",
+        "print(train_df_spaceship.isnull().sum())\n",
+        "\n",
+        "# Plot the distribution of the target variable 'Transported' to visualize the class balance\n",
+        "sns_spaceship.countplot(data=train_df_spaceship, x='Transported', color='skyblue')\n",
+        "plt_spaceship.show()\n",
+        "\n",
+        "# Create histograms for the numerical features to examine their distributions\n",
+        "numeric_features = ['Age', 'RoomService', 'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck']\n",
+        "train_df_spaceship[numeric_features].hist(bins=15, figsize=(15, 10), color='skyblue', edgecolor='black')\n",
+        "plt_spaceship.show()"
+      ],
+      "metadata": {
+        "id": "mWxxE6csdqeM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Remove the 'PassengerId', 'Name', 'Cabin', and 'VIP' columns from both the training and test datasets to clean the data\n",
+        "train_df_spaceship.drop(['PassengerId', 'Name', 'Cabin', 'VIP'], axis=1, inplace=True)\n",
+        "test_df_spaceship.drop(['PassengerId', 'Name', 'Cabin', 'VIP'], axis=1, inplace=True)\n"
+      ],
+      "metadata": {
+        "id": "zQVGZ9s4dqgm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "pev0mQIcdqjY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1dnVvVQRdql3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ll4644wBdqoD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "-cs6gdEldqpy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_5F80bq_dqsd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "MB_qtRy0dquv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "AxzwowEzdqxG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "25UCoB37dqzO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "FPDT315Ddq18"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_h2EK1JHdq4f"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "W-aTlbNXdq6h"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "GLX2CULIdq94"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
