--- a/spaceshiptatanic.ipynb
+++ b/spaceshiptatanic.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQWugrskF5Zrx+8XJT67mY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -100,7 +99,19 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Specify the categorical and numerical features to be processed separately\n",
+        "categorical_features_spaceship = ['HomePlanet', 'CryoSleep', 'Destination']\n",
+        "numeric_features_spaceship = ['Age', 'RoomService', 'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck']\n",
+        "\n",
+        "# Create imputers for filling missing values in numerical and categorical features\n",
+        "numeric_imputer = SimpleImputer(strategy='median')\n",
+        "categorical_imputer = SimpleImputer(strategy='most_frequent')\n",
+        "\n",
+        "# Fill missing values in numerical features using the median value of each column\n",
+        "train_df_spaceship[numeric_features_spaceship] = numeric_imputer.fit_transform(train_df_spaceship[numeric_features_spaceship])\n",
+        "test_df_spaceship[numeric_features_spaceship] = numeric_imputer.transform(test_df_spaceship[numeric_features_spaceship])"
+      ],
       "metadata": {
         "id": "pev0mQIcdqjY"
       },
@@ -109,7 +120,18 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Fill missing values in categorical features using the most frequent value of each column\n",
+        "train_df_spaceship[categorical_features_spaceship] = categorical_imputer.fit_transform(train_df_spaceship[categorical_features_spaceship])\n",
+        "test_df_spaceship[categorical_features_spaceship] = categorical_imputer.transform(test_df_spaceship[categorical_features_spaceship])\n",
+        "\n",
+        "# Convert categorical variables into numerical values using LabelEncoder for model compatibility\n",
+        "label_encoders = {}\n",
+        "for feature in categorical_features_spaceship:\n",
+        "    label_encoders[feature] = LabelEncoder()\n",
+        "    train_df_spaceship[feature] = label_encoders[feature].fit_transform(train_df_spaceship[feature])\n",
+        "    test_df_spaceship[feature] = label_encoders[feature].transform(test_df_spaceship[feature])"
+      ],
       "metadata": {
         "id": "1dnVvVQRdql3"
       },
