--- a/spaceshiptatanic.ipynb
+++ b/spaceshiptatanic.ipynb
@@ -188,7 +188,14 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Initialize base learners\n",
+        "base_learners = [\n",
+        "    ('RandomForest', RandomForestClassifier(verbose=2)),\n",
+        "    ('XGBoost', XGBClassifier(use_label_encoder=False, eval_metric='logloss', verbose=2)),\n",
+        "    ('LogisticRegression', LogisticRegression(max_iter=1000, verbose=2))\n",
+        "]"
+      ],
       "metadata": {
         "id": "_5F80bq_dqsd"
       },
@@ -197,7 +204,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Initialize stacking classifier with Logistic Regression as meta-learner\n",
+        "stacking_clf = StackingClassifier(estimators=base_learners, final_estimator=LogisticRegression())"
+      ],
       "metadata": {
         "id": "MB_qtRy0dquv"
       },
@@ -206,7 +216,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "Train stacking model\n",
+        "stacking_clf.fit(X_train, y_train)"
+      ],
       "metadata": {
         "id": "AxzwowEzdqxG"
       },
